--- a/bower.json
+++ b/bower.json
@@ -2,16 +2,12 @@
   "name": "sourcingSample1",
   "version": "0.0.0",
   "dependencies": {
-    "jquery": "~2.1.4",
     "angular-route": "~1.4.2",
-    "malarkey": "yuanqing/malarkey#~1.3.1",
     "angular-toastr": "~1.5.0",
-    "moment": "~2.10.6",
     "animate.css": "~3.4.0",
     "angular": "~1.4.2",
-    "d3": "^3.5.16",
-    "nvd3": "^1.8.2",
-    "angular-smart-table": "^2.1.7"
+    "bootstrap": "^3.3.7",
+    "bootstrap-sass": "bootstrap-sass-official#^3.3.7"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.2"
