--- a/bower.json
+++ b/bower.json
@@ -1,19 +1,19 @@
 {
-  "name": "sourcingSample1",
-  "version": "0.0.0",
-  "dependencies": {
-    "angular-route": "~1.4.2",
-    "angular-toastr": "~1.5.0",
-    "animate.css": "~3.4.0",
-    "angular": "~1.4.2",
-    "bootstrap": "^3.3.7",
-    "bootstrap-sass": "bootstrap-sass-official#^3.3.7"
-  },
-  "devDependencies": {
-    "angular-mocks": "~1.4.2"
-  },
-  "resolutions": {
-    "jquery": "~2.1.4",
-    "angular": "~1.4.2"
-  }
+    "name": "AngularQuiz",
+    "version": "0.0.0",
+    "dependencies": {
+        "angular-route": "~1.4.2",
+        "angular-toastr": "~1.5.0",
+        "animate.css": "~3.4.0",
+        "angular": "~1.4.2",
+        "bootstrap": "^3.3.7",
+        "bootstrap-sass": "bootstrap-sass-official#^3.3.7"
+    },
+    "devDependencies": {
+        "angular-mocks": "~1.4.2"
+    },
+    "resolutions": {
+        "jquery": "~2.1.4",
+        "angular": "~1.4.2"
+    }
 }
